--- a/index.html
+++ b/index.html
@@ -11,12 +11,15 @@
 
     <meta property="og:title" content="Sofiia Hembarska" />
 
-<meta property="og:description" content="Сайт про мене, створений у цілях вивчення основ веб дизайну" />
+<div>
+<meta property="og:description" content="Сайт про мене, створений у цілях вивчення основ веб-дизайну" />
 
-<meta property="og:image" content="img/photo1.png" />
+<meta property="og:image" content="img/photo1.png"/>
 
 <meta property="og:url" content="https://sofiapipa.github.io/" />
+</div>
 </head>
+
 <body>
     <div class="header"> 
         <a href="#top" class="logo"><img src="img/pipa.PNG" width="50"></a> 
@@ -93,6 +96,15 @@
    <i class="fa-brands fa-telegram"></i>
 </div> 
 
+<div class="share">
+    <a href="https://www.instagram.com/ten.gurax_kay/profilecard/?igsh=MWRnY3JtMXNjdnN5Mg==" target="_blank"><img src="icons/instagram.svg" alt='Мій інстаграм'></a>
+    </div>
+    <div class="share">
+        <a href="https://www.facebook.com/profile.php?id=100017231984950" target="_blank"><img src="icons/facebook.svg" alt='Мій фейсбук'></a>
+    </div>
+    <div class="share">
+        <a href="https://t.me/ibizsu" target="_blank"><img src="icons/telegram.svg" alt='мій телеграм'></a>
+        </div>
    
 </body>
 </html>
