--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <div>
 <meta property="og:description" content="Сайт про мене, створений у цілях вивчення основ веб-дизайну" />
 
-<meta property="og:image" content="img/photo1.png"/>
+<meta property="og:image" content="img/photo.png"/>
 
 <meta property="og:url" content="https://sofiapipa.github.io/" />
 </div>
@@ -85,25 +85,20 @@
 <br>
    <div class="section">
    <p>Дякую що відвідали мій сайт! (погладьте котика курсором на прощання)</p>
-   <style>
-    img:hover {
-      -webkit-transform: scaleX(-1);
-      transform: scaleX(-1);
-    }
-    </style>
-   <img src="img/dance.png" width="200">
 
-   <i class="fa-brands fa-telegram"></i>
+   <img src="img/dance.png" width="300" id="dance">
+
+
+
+   
 </div> 
 
+<br>
 <div class="share">
-    <a href="https://www.instagram.com/ten.gurax_kay/profilecard/?igsh=MWRnY3JtMXNjdnN5Mg==" target="_blank"><img src="icons/instagram.svg" alt='Мій інстаграм'></a>
+    <a href="https://www.instagram.com/widmabolotna/" target="_blank"><img src="img/image2.png" width="50" alt='Мій інстаграм'></a>
     </div>
     <div class="share">
-        <a href="https://www.facebook.com/profile.php?id=100017231984950" target="_blank"><img src="icons/facebook.svg" alt='Мій фейсбук'></a>
-    </div>
-    <div class="share">
-        <a href="https://t.me/ibizsu" target="_blank"><img src="icons/telegram.svg" alt='мій телеграм'></a>
+        <a href="https://t.me/widmabolotna" target="_blank"><img src="img/image1.png" width="50" alt='мій телеграм'></a>
         </div>
    
 </body>
