--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,99 +8,100 @@
 
     <title>Sofiia Hembarska</title>
 
-    <link rel="icon" href="img/pipa.PNG" type="image/x-icon"/>
+    <link rel="icon" href="img/pipa.PNG" type="image/x-icon" />
 
     <meta property="og:title" content="Sofiia Hembarska" />
 
-<div>
-<meta property="og:description" content="Сайт про мене, створений у цілях вивчення основ веб-дизайну" />
+    <meta property="og:description" content="Сайт про мене, створений у цілях вивчення основ веб-дизайну" />
 
-<meta property="og:image" content="img/photo.png"/>
+    <meta property="og:image" content="https://sofiapipa.github.io/img/photo1.png" />
 
-<meta property="og:url" content="https://sofiapipa.github.io/" />
-</div>
+    <meta property="og:url" content="https://sofiapipa.github.io/" />
+    <link rel="stylesheet" href="styles.css">
+
 </head>
 
 <body>
-    <div class="header"> 
-        <a href="#top" class="logo"><img src="img/pipa.PNG" width="50"></a> 
-        <ul class="menu"> 
-            <li><a href="#about">Про мене</a></li> 
-            <li><a href="#works">Роботи</a></li> 
-            <li><a href="#ulub">Домашні улюбленці</a></li> 
-        </ul> 
-    </div> 
+    <div class="header">
+        <a href="#top" class="logo"><img src="img/pipa.PNG" width="50"></a>
+        <ul class="menu">
+            <li><a href="#about">Про мене</a></li>
+            <li><a href="#works">Роботи</a></li>
+            <li><a href="#ulub">Домашні улюбленці</a></li>
+        </ul>
+    </div>
+
+    <div class="section" id="about">
+        <h1>Привіт світ! Мене звати Софія 🌟</h1>
+        <p>Я народилась 3 травня 2006 року у місті Львові та все життя в ньому прожила, мій знак зодіаку Телець, тип
+            особистості <a href="https://www.16personalities.com/uk/osobystist-infj" target="_blank">INFJ</a>. мої
+            улюблені кольори - жовтий та фіолетовий, улюблені пори року - осінь та весна. Мої головні хобі - малювання
+            та відеоігри</p>
+
+        <img src="img/dit.jpg" width="200">
+        <img src="img/dit2.jpg" width="200">
+        <img src="img/photo.png" width="200">
+        <img src="img/photo1.png" width="200">
+        <hr>
+    </div>
+
+
+
+    <div class="section" id="ulub">
+        <h2>Мої домашні улюбленці🐾</h2>
+        <p> Піпа</p>
+        <p>Це моя киця Піпа, їй вже 6 років. Вона народилась 4 травня, на 1 день пізніше мене, тому дні народження ми
+            святкуємо разом!</p>
+        <img src="img/car.png" width="200">
+        <img src="img/car2.png" width="195">
+        <img src="img/car3.png" width="347">
+
+        <p> В минулому в мене була рибка Булька, собачка Баська та хом'як Бонька </p>
+        <hr>
+    </div>
 
     <br>
+    <div class="section">
+        <h2>Життя в коледжі</h2>
+        <p>Від самого дитинства я дуже любила малювати, тому поступила в коледж <a
+                href="https://www.artcollege.lviv.ua/" target="_blank">ім. І. Труша</a> у 2021 році, коли мені було 15
+            років.</p>
 
-    <link rel="stylesheet" href="styles.css">
+        <img src="img/1kurs1.png" width="200">
+        <img src="img/1kurs.png" width="250">
 
-    <div class="section" id="about"> 
-        <h1>Привіт світ! Мене звати Софія 🌟</h1>
-        <p>Я народилась 3 травня 2006 року у місті Львові та все життя в ньому прожила, мій знак зодіаку Телець, тип особистості <a href="https://www.16personalities.com/uk/osobystist-infj" target="_blank">INFJ</a>. мої улюблені кольори - жовтий та фіолетовий, улюблені пори року - осінь та весна. Мої головні хобі - малювання та відеоігри</p>
-    
-    <img src="img/dit.jpg" width="200">
-    <img src="img/dit2.jpg" width="200">
-    <img src="img/photo.png" width="200">
-    <img src="img/photo1.png" width="200">
-    <hr>
-    </div> 
-
-    <p></p>
-
-<div class="section" id="ulub"> 
-    <h2>Мої домашні улюбленці🐾</h2> 
-    <p> Піпа</p>
-    <p>Це моя киця Піпа, їй вже 6 років. Вона народилась 4 травня, на 1 день пізніше мене, тому дні народження ми святкуємо разом!</p>
-    <img src="img/car.png" width="200">
-    <img src="img/car2.png" width="195">
-    <img src="img/car3.png" width="347">
-
-    <p> В минулому в мене була рибка Булька, собачка Баська та хом'як Бонька </p>
-   <hr>
-</div> 
-
- <br>  
-<div class="section">
-   <h2>Життя в коледжі</h2> 
-   <p>Від самого дитинства я дуже любила малювати, тому поступила в коледж <a href="https://www.artcollege.lviv.ua/" target="_blank">ім. І. Труша</a> у 2021 році, коли мені було 15 років.</p>
-
-   <img src="img/1kurs1.png" width="200"> 
-   <img src="img/1kurs.png" width="250"> 
-
-   <p>За цей час я познайомилась з багатьма прекрасними людьми і заробила купу класних спогадів!</p>
-</div>
-
-<br>
-   <div class="section" id="works"> 
-    <h2>Творчість</h2>  
-
-   <p>У вільний час я люблю малювати на планшеті, але також часто експериментую з різними матеріалами</p>
-
-   <img src="img/art1.png" width="200">
-   <img src="img/art2.png" width="160">
-   <img src="img/art3.png" width="260">
-   <img src="img/art4.png" width="540">
-</div>
-
-<br>
-   <div class="section">
-   <p>Дякую що відвідали мій сайт! (погладьте котика курсором на прощання)</p>
-
-   <img src="img/dance.png" width="300" id="dance">
+        <p>За цей час я познайомилась з багатьма прекрасними людьми і заробила купу класних спогадів!</p>
+    </div>
 
 
+    <div class="section" id="works">
+        <h2>Творчість</h2>
 
-   
-</div> 
+        <p>У вільний час я люблю малювати на планшеті, але також часто експериментую з різними матеріалами</p>
 
-<br>
-<div class="share">
-    <a href="https://www.instagram.com/widmabolotna/" target="_blank"><img src="img/image2.png" width="50" alt='Мій інстаграм'></a>
+        <img src="img/art1.png" width="200">
+        <img src="img/art2.png" width="160">
+        <img src="img/art3.png" width="260">
+        <img src="img/art4.png" width="540">
+    </div>
+
+
+    <div class="section">
+        <p>Дякую що відвідали мій сайт! (погладьте котика курсором на прощання)</p>
+
+        <img src="img/dance.png" width="300" id="dance">
+
+    </div>
+
+
+    <div class="share">
+        <a href="https://www.instagram.com/widmabolotna/" target="_blank"><img src="img/image2.png" width="50"
+                alt='Мій інстаграм'></a>
     </div>
     <div class="share">
         <a href="https://t.me/widmabolotna" target="_blank"><img src="img/image1.png" width="50" alt='мій телеграм'></a>
-        </div>
-   
+    </div>
+
 </body>
+
 </html>
