--- a/index.html
+++ b/index.html
@@ -30,6 +30,11 @@
             <li><a href="#ulub">Домашні улюбленці</a></li>
         </ul>
     </div>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
 
     <div class="section" id="about">
         <h1>Привіт світ! Мене звати Софія 🌟</h1>
@@ -79,6 +84,7 @@
 
 
         <p>За цей час я познайомилась з багатьма прекрасними людьми і заробила купу класних спогадів!</p>
+        <hr>
     </div>
 
 
@@ -92,14 +98,14 @@
             <a target="_blank" href="img/art1.png">
               <img src="img/art1.png" height="200">
             </a>
-            <div class="desc">Виконано у Procreate</div>
+            <div class="desc">На планшеті</div>
           </div>
           
           <div class="gallery">
             <a target="_blank" href="img/art2.png">
               <img src="img/art2.png" height="120" >
             </a>
-            <div class="desc">Олійні фарби</div>
+            <div class="desc">Акварель та туш</div>
           </div>
           
           <div class="gallery">
@@ -116,6 +122,7 @@
             <div class="desc">Пастель</div>
           </div>
     </div>
+    <hr>
 </div>
 <br>
 
@@ -125,6 +132,7 @@
         <div class="flex-container5">
             <div><img src="img/dance.png" width="300" id="dance"></div>
           </div>
+          <hr>
 
 
     </div>
