--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                 <div><img src="img/dit2.jpg" id="dit2" width="200"></div>
                 <div><img src="img/photo.png" id="dit3" width="200"></div>
                 <div><img src="img/photo1.png" id="dit4" width="200"></div>
-                <div><img src="img/dm2.png" width="200"></div>
+                <div><img src="img/dm2.PNG" width="200"></div>
               </div>
     </div>
 
@@ -129,7 +129,7 @@
         <h1>Дякую що відвідали мій сайт! (погладьте котика курсором на прощання)</h1>
         <div class="flex-container5">
             <div><img src="img/dance.png" width="300" id="dance"></div>
-            <div><img src="img/dm3.png" width="300"></div>
+            <div><img src="img/dm3.PNG" width="300"></div>
           </div>
     </div>
 
